--- a/index.html
+++ b/index.html
@@ -17,175 +17,189 @@
   <body>
     <!--HEADER-->
     <header class="header">
-      <nav class="navigation">
-        <a class="logo" href="./index.html" aria-label="логотип веб-студии"
-          >Web<span class="logo-color">Studio</span></a
-        >
-        <ul class="navigation-list list">
-          <li class="navigation-list-item">
-            <a class="navigation-list-link-active link" href="">Студия</a>
-          </li>
-          <li class="navigation-list-item">
-            <a class="navigation-list-link link" href="./portfolio.html"
-              >Портфолио</a
-            >
-          </li>
-          <li class="navigation-list-item">
-            <a class="navigation-list-link link" href="">Контакты</a>
-          </li>
-        </ul>
-      </nav>
-      <address class="address">
-        <ul class="address-list">
-          <li>
-            <a class="header-mail-link link" href="mailto:info@devstudio.com"
-              >info@devstudio.com</a
-            >
-          </li>
-          <li>
-            <a class="header-tel-link link" href="tel:+380961111111"
-              >+38 096 111 11 11</a
-            >
-          </li>
-        </ul>
-      </address>
+      <div class="container">
+        <nav class="navigation">
+          <a class="logo" href="./index.html" aria-label="логотип веб-студии"
+            >Web<span class="logo-color">Studio</span></a
+          >
+          <ul class="navigation-list list">
+            <li class="navigation-list-item">
+              <a class="navigation-list-link-active link" href="">Студия</a>
+            </li>
+            <li class="navigation-list-item">
+              <a class="navigation-list-link link" href="./portfolio.html"
+                >Портфолио</a
+              >
+            </li>
+            <li class="navigation-list-item">
+              <a class="navigation-list-link link" href="">Контакты</a>
+            </li>
+          </ul>
+        </nav>
+        <address class="address">
+          <ul class="address-list">
+            <li>
+              <a class="header-mail-link link" href="mailto:info@devstudio.com"
+                >info@devstudio.com</a
+              >
+            </li>
+            <li>
+              <a class="header-tel-link link" href="tel:+380961111111"
+                >+38 096 111 11 11</a
+              >
+            </li>
+          </ul>
+        </address>
+      </div>
     </header>
     <main>
       <!--HERO-->
       <section class="hero">
-        <h1 class="hero-title">Эффективные решения <br />для вашего бизнеса</h1>
-        <button class="hero-button" type="button">Заказать услугу</button>
+        <div class="container">
+          <h1 class="hero-title">
+            Эффективные решения <br />для вашего бизнеса
+          </h1>
+          <button class="hero-button" type="button">Заказать услугу</button>
+        </div>
       </section>
       <!-- ABOUT US -->
       <section class="about">
-        <ul class="about-list">
-          <li class="about-list-item">
-            <h3 class="about-list-subtitle">Внимание к деталям</h3>
-            <p class="about-text">
-              Идейные соображения, а также начало повседневной работы по
-              формированию позиции.
-            </p>
-          </li>
-          <li class="about-list-item">
-            <h3 class="about-list-subtitle">Пунктуальность</h3>
-            <p class="about-text">
-              Задача организации, в особенности же рамки и место обучения кадров
-              влечет за собой.
-            </p>
-          </li>
-          <li class="about-list-item">
-            <h3 class="about-list-subtitle">Планирование</h3>
-            <p class="about-text">
-              Равным образом консультация с широким активом в значительной
-              степени обуславливает.
-            </p>
-          </li>
-          <li class="about-list-item">
-            <h3 class="about-list-subtitle">Современные технологии</h3>
-            <p class="about-text">
-              Значимость этих проблем настолько очевидна, что реализация
-              плановых заданий.
-            </p>
-          </li>
-        </ul>
+        <div class="container">
+          <ul class="about-list">
+            <li class="about-list-item">
+              <h3 class="about-list-subtitle">Внимание к деталям</h3>
+              <p class="about-text">
+                Идейные соображения, а также начало повседневной работы по
+                формированию позиции.
+              </p>
+            </li>
+            <li class="about-list-item">
+              <h3 class="about-list-subtitle">Пунктуальность</h3>
+              <p class="about-text">
+                Задача организации, в особенности же рамки и место обучения
+                кадров влечет за собой.
+              </p>
+            </li>
+            <li class="about-list-item">
+              <h3 class="about-list-subtitle">Планирование</h3>
+              <p class="about-text">
+                Равным образом консультация с широким активом в значительной
+                степени обуславливает.
+              </p>
+            </li>
+            <li class="about-list-item">
+              <h3 class="about-list-subtitle">Современные технологии</h3>
+              <p class="about-text">
+                Значимость этих проблем настолько очевидна, что реализация
+                плановых заданий.
+              </p>
+            </li>
+          </ul>
 
-        <h2 class="title">Чем мы занимаемся</h2>
-        <ul class="title-img list">
-          <li>
-            <img
-              src="./images/main/about/about1.jpg"
-              alt="программируем"
-              width="370"
-              height="294"
-            />
-          </li>
-          <li>
-            <img
-              src="./images/main/about/about2.jpg"
-              alt="формируем оболочку"
-              width="370"
-              height="294"
-            />
-          </li>
-          <li>
-            <img
-              src="./images/main/about/about3.jpg"
-              alt="создаём дизайн"
-              width="370"
-              height="294"
-            />
-          </li>
-        </ul>
+          <h2 class="title">Чем мы занимаемся</h2>
+          <ul class="title-img list">
+            <li>
+              <img
+                src="./images/main/about/about1.jpg"
+                alt="программируем"
+                width="370"
+                height="294"
+              />
+            </li>
+            <li>
+              <img
+                src="./images/main/about/about2.jpg"
+                alt="формируем оболочку"
+                width="370"
+                height="294"
+              />
+            </li>
+            <li>
+              <img
+                src="./images/main/about/about3.jpg"
+                alt="создаём дизайн"
+                width="370"
+                height="294"
+              />
+            </li>
+          </ul>
+        </div>
       </section>
       <!-- OUR TEAM -->
-      <section>
-        <h2 class="title">Наша команда</h2>
-        <ul class="team-list list">
-          <li>
-            <img
-              src="./images/main/our-team/igor.jpg"
-              alt="Игорь Демьяненко"
-              width="270"
-              height="260"
-            />
-            <h3 class="team-list-subtitle">Игорь Демьяненко</h3>
-            <p class="team-text">Product Designer</p>
-          </li>
-          <li>
-            <img
-              src="./images/main/our-team/olga.jpg"
-              alt="Ольга Репина"
-              width="270"
-              height="260"
-            />
-            <h3 class="team-list-subtitle">Ольга Репина</h3>
-            <p class="team-text">Frontend Developer</p>
-          </li>
-          <li>
-            <img
-              src="./images/main/our-team/nicolay.jpg"
-              alt="Николай Тарасов"
-              width="270"
-              height="260"
-            />
-            <h3 class="team-list-subtitle">Николай Тарасов</h3>
-            <p class="team-text">Marketing</p>
-          </li>
-          <li>
-            <img
-              src="./images/main/our-team/michail.jpg"
-              alt="Михаил Ермаков"
-              width="270"
-              height="260"
-            />
-            <h3 class="team-list-subtitle">Михаил Ермаков</h3>
-            <p class="team-text">UI Designer</p>
-          </li>
-        </ul>
+      <section class="our-team">
+        <div class="container">
+          <h2 class="title">Наша команда</h2>
+          <ul class="team-list list">
+            <li>
+              <img
+                src="./images/main/our-team/igor.jpg"
+                alt="Игорь Демьяненко"
+                width="270"
+                height="260"
+              />
+              <h3 class="team-list-subtitle">Игорь Демьяненко</h3>
+              <p class="team-text">Product Designer</p>
+            </li>
+            <li>
+              <img
+                src="./images/main/our-team/olga.jpg"
+                alt="Ольга Репина"
+                width="270"
+                height="260"
+              />
+              <h3 class="team-list-subtitle">Ольга Репина</h3>
+              <p class="team-text">Frontend Developer</p>
+            </li>
+            <li>
+              <img
+                src="./images/main/our-team/nicolay.jpg"
+                alt="Николай Тарасов"
+                width="270"
+                height="260"
+              />
+              <h3 class="team-list-subtitle">Николай Тарасов</h3>
+              <p class="team-text">Marketing</p>
+            </li>
+            <li>
+              <img
+                src="./images/main/our-team/michail.jpg"
+                alt="Михаил Ермаков"
+                width="270"
+                height="260"
+              />
+              <h3 class="team-list-subtitle">Михаил Ермаков</h3>
+              <p class="team-text">UI Designer</p>
+            </li>
+          </ul>
+        </div>
       </section>
     </main>
+    <!-- CONTACTS-->
     <footer class="footer">
-      <!-- CONTACTS-->
-      <a class="logo" href="./index.html" aria-label="логотип веб-студии"
-        >Web<span class="footer-logo-color">Studio</span></a
-      >
-      <address class="address">
-        <ul class="list">
-          <li>
-            <a class="location link" href="">г. Киев, пр-т Леси Украинки, 26</a>
-          </li>
-          <li>
-            <a class="footer-mail-link link" href="mailto:info@devstudio.com"
-              >info@devstudio.com</a
-            >
-          </li>
-          <li>
-            <a class="footer-tel-link link" href="tel:+380961111111"
-              >+38 096 111 11 11</a
-            >
-          </li>
-        </ul>
-      </address>
+      <div class="container">
+        <a class="logo" href="./index.html" aria-label="логотип веб-студии"
+          >Web<span class="footer-logo-color">Studio</span></a
+        >
+        <address class="address">
+          <ul class="list">
+            <li class="list-item">
+              <a class="location link" href=""
+                >г. Киев, пр-т Леси Украинки, 26</a
+              >
+            </li>
+            <li class="list-item">
+              <a class="footer-mail-link link" href="mailto:info@devstudio.com"
+                >info@devstudio.com</a
+              >
+            </li>
+            <li class="list-item">
+              <a class="footer-tel-link link" href="tel:+380961111111"
+                >+38 096 111 11 11</a
+              >
+            </li>
+          </ul>
+        </address>
+      </div>
     </footer>
   </body>
 </html>
