--- a/portfolio.html
+++ b/portfolio.html
@@ -17,219 +17,234 @@
   <body>
     <!--HEADER-->
     <header class="header">
-      <nav class="navigation">
-        <a class="logo" href="./index.html" aria-label="логотип веб-студии"
-          >Web<span class="logo-color">Studio</span></a
-        >
-        <ul class="navigation-list list">
-          <li class="navigation-list-item">
-            <a class="navigation-list-link link" href="./index.html">Студия</a>
-          </li>
-          <li class="navigation-list-item">
-            <a class="navigation-list-link-active link" href="">Портфолио</a>
-          </li>
-          <li class="navigation-list-item">
-            <a class="navigation-list-link link" href="">Контакты</a>
-          </li>
-        </ul>
-      </nav>
-      <address class="address">
-        <ul class="address-list">
-          <li>
-            <a class="header-mail-link link" href="mailto:info@devstudio.com"
-              >info@devstudio.com</a
-            >
-          </li>
-          <li>
-            <a class="header-tel-link link" href="tel:+380961111111"
-              >+38 096 111 11 11</a
-            >
-          </li>
-        </ul>
-      </address>
+      <div class="container">
+        <nav class="navigation">
+          <a class="logo" href="./index.html" aria-label="логотип веб-студии"
+            >Web<span class="logo-color">Studio</span></a
+          >
+          <ul class="navigation-list list">
+            <li class="navigation-list-item">
+              <a class="navigation-list-link link" href="./index.html"
+                >Студия</a
+              >
+            </li>
+            <li class="navigation-list-item">
+              <a class="navigation-list-link-active link" href="">Портфолио</a>
+            </li>
+            <li class="navigation-list-item">
+              <a class="navigation-list-link link" href="">Контакты</a>
+            </li>
+          </ul>
+        </nav>
+        <address class="address">
+          <ul class="address-list">
+            <li>
+              <a class="header-mail-link link" href="mailto:info@devstudio.com"
+                >info@devstudio.com</a
+              >
+            </li>
+            <li>
+              <a class="header-tel-link link" href="tel:+380961111111"
+                >+38 096 111 11 11</a
+              >
+            </li>
+          </ul>
+        </address>
+      </div>
     </header>
     <main>
+      <hr />
       <!-- portfolio button -->
       <section class="portfolio">
-        <ul class="list">
-          <li>
-            <button class="portfolio-button-item" type="button">Все</button>
-          </li>
-          <li>
-            <button class="portfolio-button-item" type="button">
-              Веб-сайты
-            </button>
-          </li>
-          <li>
-            <button class="portfolio-button-item" type="button">
-              Приложения
-            </button>
-          </li>
-          <li>
-            <button class="portfolio-button-item" type="button">Дизайн</button>
-          </li>
-          <li>
-            <button class="portfolio-button-item" type="button">
-              Маркетинг
-            </button>
-          </li>
-        </ul>
-        <ul class="list">
-          <li>
-            <div>
-              <a class="link" href=""
-                ><img
-                  src="./images/main/portfolio-work/work1.jpg"
-                  alt="Веб-сайт"
-                  width="370"
-                  height="294"
-                />
-                <h3 class="work-portfolio-subtitle">Технокряк</h3>
-                <p class="work-text">Веб-сайт</p></a
-              >
-            </div>
-          </li>
-          <li>
-            <div>
-              <a class="link" href="">
-                <img
-                  src="./images/main/portfolio-work/work2.jpg"
-                  alt="Веб-сайт"
-                  width="370"
-                  height="294"
-                />
-                <h3 class="work-portfolio-subtitle">
-                  Постер New Orlean vs Golden Star
-                </h3>
-                <p class="work-text">Дизайн</p>
-              </a>
-            </div>
-          </li>
-          <li>
-            <div>
-              <a class="link" href="">
-                <img
-                  src="./images/main/portfolio-work/work3.jpg"
-                  alt="Веб-сайт"
-                  width="370"
-                  height="294"
-                />
-                <h3 class="work-portfolio-subtitle">Ресторан Seafood</h3>
-                <p class="work-text">Приложение</p>
-              </a>
-            </div>
-          </li>
-          <li>
-            <div>
-              <a class="link" href="">
-                <img
-                  src="./images/main/portfolio-work/work4.jpg"
-                  alt="Веб-сайт"
-                  width="370"
-                  height="294"
-                />
-                <h3 class="work-portfolio-subtitle">Проект Prime</h3>
-                <p class="work-text">Маркетинг</p>
-              </a>
-            </div>
-          </li>
-          <li>
-            <div>
-              <a class="link" href="">
-                <img
-                  src="./images/main/portfolio-work/work5.jpg"
-                  alt="Веб-сайт"
-                  width="370"
-                  height="294"
-                />
-                <h3 class="work-portfolio-subtitle">Проект Boxes</h3>
-                <p class="work-text">Приложение</p>
-              </a>
-            </div>
-          </li>
-          <li>
-            <div>
-              <a class="link" href="">
-                <img
-                  src="./images/main/portfolio-work/work6.jpg"
-                  alt="Веб-сайт"
-                  width="370"
-                  height="294"
-                />
-                <h3 class="work-portfolio-subtitle">
-                  Inspiration has no Borders
-                </h3>
-                <p class="work-text">Веб-сайт</p>
-              </a>
-            </div>
-          </li>
-          <li>
-            <div>
-              <a class="link" href="">
-                <img
-                  src="./images/main/portfolio-work/work7.jpg"
-                  alt="Веб-сайт"
-                  width="370"
-                  height="294"
-                />
-                <h3 class="work-portfolio-subtitle">Издание Limited Edition</h3>
-                <p class="work-text">Дизайн</p>
-              </a>
-            </div>
-          </li>
-          <li>
-            <div>
-              <a class="link" href="">
-                <img
-                  src="./images/main/portfolio-work/work8.jpg"
-                  alt="Веб-сайт"
-                  width="370"
-                  height="294"
-                />
-                <h3 class="work-portfolio-subtitle">Проект LAB</h3>
-                <p class="work-text">Маркетинг</p>
-              </a>
-            </div>
-          </li>
-          <li>
-            <div>
-              <a class="link" href="">
-                <img
-                  src="./images/main/portfolio-work/work9.jpg"
-                  alt="Веб-сайт"
-                  width="370"
-                  height="294"
-                />
-                <h3 class="work-portfolio-subtitle">Growing Business</h3>
-                <p class="work-text">Приложение</p>
-              </a>
-            </div>
-          </li>
-        </ul>
+        <div class="container">
+          <ul class="portfolio-button-list list">
+            <li class="portfolio-button-list-item">
+              <button class="portfolio-button-item" type="button">Все</button>
+            </li>
+            <li class="portfolio-button-list-item">
+              <button class="portfolio-button-item" type="button">
+                Веб-сайты
+              </button>
+            </li>
+            <li class="portfolio-button-list-item">
+              <button class="portfolio-button-item" type="button">
+                Приложения
+              </button>
+            </li>
+            <li class="portfolio-button-list-item">
+              <button class="portfolio-button-item" type="button">
+                Дизайн
+              </button>
+            </li>
+            <li class="portfolio-button-list-item">
+              <button class="portfolio-button-item" type="button">
+                Маркетинг
+              </button>
+            </li>
+          </ul>
+          <ul class="portfolio-element list">
+            <li class="portfolio-element-item">
+              <div>
+                <a class="link" href=""
+                  ><img
+                    src="./images/main/portfolio-work/work1.jpg"
+                    alt="Веб-сайт"
+                    width="370"
+                    height="294"
+                  />
+                  <h3 class="work-portfolio-subtitle">Технокряк</h3>
+                  <p class="work-text">Веб-сайт</p></a
+                >
+              </div>
+            </li>
+            <li class="portfolio-element-item">
+              <div>
+                <a class="link" href="">
+                  <img
+                    src="./images/main/portfolio-work/work2.jpg"
+                    alt="Веб-сайт"
+                    width="370"
+                    height="294"
+                  />
+                  <h3 class="work-portfolio-subtitle">
+                    Постер New Orlean vs Golden Star
+                  </h3>
+                  <p class="work-text">Дизайн</p>
+                </a>
+              </div>
+            </li>
+            <li class="portfolio-element-item">
+              <div>
+                <a class="link" href="">
+                  <img
+                    src="./images/main/portfolio-work/work3.jpg"
+                    alt="Веб-сайт"
+                    width="370"
+                    height="294"
+                  />
+                  <h3 class="work-portfolio-subtitle">Ресторан Seafood</h3>
+                  <p class="work-text">Приложение</p>
+                </a>
+              </div>
+            </li>
+            <li class="portfolio-element-item">
+              <div>
+                <a class="link" href="">
+                  <img
+                    src="./images/main/portfolio-work/work4.jpg"
+                    alt="Веб-сайт"
+                    width="370"
+                    height="294"
+                  />
+                  <h3 class="work-portfolio-subtitle">Проект Prime</h3>
+                  <p class="work-text">Маркетинг</p>
+                </a>
+              </div>
+            </li>
+            <li class="portfolio-element-item">
+              <div>
+                <a class="link" href="">
+                  <img
+                    src="./images/main/portfolio-work/work5.jpg"
+                    alt="Веб-сайт"
+                    width="370"
+                    height="294"
+                  />
+                  <h3 class="work-portfolio-subtitle">Проект Boxes</h3>
+                  <p class="work-text">Приложение</p>
+                </a>
+              </div>
+            </li>
+            <li class="portfolio-element-item">
+              <div>
+                <a class="link" href="">
+                  <img
+                    src="./images/main/portfolio-work/work6.jpg"
+                    alt="Веб-сайт"
+                    width="370"
+                    height="294"
+                  />
+                  <h3 class="work-portfolio-subtitle">
+                    Inspiration has no Borders
+                  </h3>
+                  <p class="work-text">Веб-сайт</p>
+                </a>
+              </div>
+            </li>
+            <li class="portfolio-element-item">
+              <div>
+                <a class="link" href="">
+                  <img
+                    src="./images/main/portfolio-work/work7.jpg"
+                    alt="Веб-сайт"
+                    width="370"
+                    height="294"
+                  />
+                  <h3 class="work-portfolio-subtitle">
+                    Издание Limited Edition
+                  </h3>
+                  <p class="work-text">Дизайн</p>
+                </a>
+              </div>
+            </li>
+            <li class="portfolio-element-item">
+              <div>
+                <a class="link" href="">
+                  <img
+                    src="./images/main/portfolio-work/work8.jpg"
+                    alt="Веб-сайт"
+                    width="370"
+                    height="294"
+                  />
+                  <h3 class="work-portfolio-subtitle">Проект LAB</h3>
+                  <p class="work-text">Маркетинг</p>
+                </a>
+              </div>
+            </li>
+            <li class="portfolio-element-item">
+              <div>
+                <a class="link" href="">
+                  <img
+                    src="./images/main/portfolio-work/work9.jpg"
+                    alt="Веб-сайт"
+                    width="370"
+                    height="294"
+                  />
+                  <h3 class="work-portfolio-subtitle">Growing Business</h3>
+                  <p class="work-text">Приложение</p>
+                </a>
+              </div>
+            </li>
+          </ul>
+        </div>
       </section>
     </main>
+    <!-- CONTACTS-->
     <footer class="footer">
-      <!-- CONTACTS-->
-      <a class="logo" href="./index.html" aria-label="логотип веб-студии"
-        >Web<span class="footer-logo-color">Studio</span></a
-      >
-      <address class="address">
-        <ul class="list">
-          <li>
-            <a class="location link" href="">г. Киев, пр-т Леси Украинки, 26</a>
-          </li>
-          <li>
-            <a class="footer-mail-link link" href="mailto:info@devstudio.com"
-              >info@devstudio.com</a
-            >
-          </li>
-          <li>
-            <a class="footer-tel-link link" href="tel:+380961111111"
-              >+38 096 111 11 11</a
-            >
-          </li>
-        </ul>
-      </address>
+      <div class="container">
+        <a class="logo" href="./index.html" aria-label="логотип веб-студии"
+          >Web<span class="footer-logo-color">Studio</span></a
+        >
+        <address class="address">
+          <ul class="list">
+            <li class="list-item">
+              <a class="location link" href=""
+                >г. Киев, пр-т Леси Украинки, 26</a
+              >
+            </li>
+            <li class="list-item">
+              <a class="footer-mail-link link" href="mailto:info@devstudio.com"
+                >info@devstudio.com</a
+              >
+            </li>
+            <li class="list-item">
+              <a class="footer-tel-link link" href="tel:+380961111111"
+                >+38 096 111 11 11</a
+              >
+            </li>
+          </ul>
+        </address>
+      </div>
     </footer>
   </body>
 </html>
