--- a/index.html
+++ b/index.html
@@ -57,13 +57,14 @@
       <section class="hero">
         <div class="container">
           <h1 class="hero-title">
-            Эффективные решения <br />для вашего бизнеса
+            Эффективные решения <br />
+            для вашего бизнеса
           </h1>
           <button class="hero-button" type="button">Заказать услугу</button>
         </div>
       </section>
       <!-- ABOUT US -->
-      <section class="about">
+      <section class="about-advantages">
         <div class="container">
           <ul class="about-list">
             <li class="about-list-item">
@@ -95,7 +96,10 @@
               </p>
             </li>
           </ul>
-
+        </div>
+      </section>
+      <section class="about-activity">
+        <div class="container">
           <h2 class="title">Чем мы занимаемся</h2>
           <ul class="title-img list">
             <li>
@@ -130,7 +134,7 @@
         <div class="container">
           <h2 class="title">Наша команда</h2>
           <ul class="team-list list">
-            <li>
+            <li class="team-list-element">
               <img
                 src="./images/main/our-team/igor.jpg"
                 alt="Игорь Демьяненко"
@@ -140,7 +144,7 @@
               <h3 class="team-list-subtitle">Игорь Демьяненко</h3>
               <p class="team-text">Product Designer</p>
             </li>
-            <li>
+            <li class="team-list-element">
               <img
                 src="./images/main/our-team/olga.jpg"
                 alt="Ольга Репина"
@@ -150,7 +154,7 @@
               <h3 class="team-list-subtitle">Ольга Репина</h3>
               <p class="team-text">Frontend Developer</p>
             </li>
-            <li>
+            <li class="team-list-element">
               <img
                 src="./images/main/our-team/nicolay.jpg"
                 alt="Николай Тарасов"
@@ -160,7 +164,7 @@
               <h3 class="team-list-subtitle">Николай Тарасов</h3>
               <p class="team-text">Marketing</p>
             </li>
-            <li>
+            <li class="team-list-element">
               <img
                 src="./images/main/our-team/michail.jpg"
                 alt="Михаил Ермаков"
