--- a/portfolio.html
+++ b/portfolio.html
@@ -84,136 +84,116 @@
           </ul>
           <ul class="portfolio-element list">
             <li class="portfolio-element-item">
-              <div>
-                <a class="link" href=""
-                  ><img
-                    src="./images/main/portfolio-work/work1.jpg"
-                    alt="Веб-сайт"
-                    width="370"
-                    height="294"
-                  />
-                  <h3 class="work-portfolio-subtitle">Технокряк</h3>
-                  <p class="work-text">Веб-сайт</p></a
-                >
-              </div>
+              <a class="link" href=""
+                ><img
+                  src="./images/main/portfolio-work/work1.jpg"
+                  alt="Веб-сайт"
+                  width="370"
+                  height="294"
+                />
+                <h3 class="work-portfolio-subtitle">Технокряк</h3>
+                <p class="work-text">Веб-сайт</p></a
+              >
             </li>
             <li class="portfolio-element-item">
-              <div>
-                <a class="link" href="">
-                  <img
-                    src="./images/main/portfolio-work/work2.jpg"
-                    alt="Веб-сайт"
-                    width="370"
-                    height="294"
-                  />
-                  <h3 class="work-portfolio-subtitle">
-                    Постер New Orlean vs Golden Star
-                  </h3>
-                  <p class="work-text">Дизайн</p>
-                </a>
-              </div>
+              <a class="link" href="">
+                <img
+                  src="./images/main/portfolio-work/work2.jpg"
+                  alt="Веб-сайт"
+                  width="370"
+                  height="294"
+                />
+                <h3 class="work-portfolio-subtitle">
+                  Постер New Orlean vs Golden Star
+                </h3>
+                <p class="work-text">Дизайн</p>
+              </a>
             </li>
             <li class="portfolio-element-item">
-              <div>
-                <a class="link" href="">
-                  <img
-                    src="./images/main/portfolio-work/work3.jpg"
-                    alt="Веб-сайт"
-                    width="370"
-                    height="294"
-                  />
-                  <h3 class="work-portfolio-subtitle">Ресторан Seafood</h3>
-                  <p class="work-text">Приложение</p>
-                </a>
-              </div>
+              <a class="link" href="">
+                <img
+                  src="./images/main/portfolio-work/work3.jpg"
+                  alt="Веб-сайт"
+                  width="370"
+                  height="294"
+                />
+                <h3 class="work-portfolio-subtitle">Ресторан Seafood</h3>
+                <p class="work-text">Приложение</p>
+              </a>
             </li>
             <li class="portfolio-element-item">
-              <div>
-                <a class="link" href="">
-                  <img
-                    src="./images/main/portfolio-work/work4.jpg"
-                    alt="Веб-сайт"
-                    width="370"
-                    height="294"
-                  />
-                  <h3 class="work-portfolio-subtitle">Проект Prime</h3>
-                  <p class="work-text">Маркетинг</p>
-                </a>
-              </div>
+              <a class="link" href="">
+                <img
+                  src="./images/main/portfolio-work/work4.jpg"
+                  alt="Веб-сайт"
+                  width="370"
+                  height="294"
+                />
+                <h3 class="work-portfolio-subtitle">Проект Prime</h3>
+                <p class="work-text">Маркетинг</p>
+              </a>
             </li>
             <li class="portfolio-element-item">
-              <div>
-                <a class="link" href="">
-                  <img
-                    src="./images/main/portfolio-work/work5.jpg"
-                    alt="Веб-сайт"
-                    width="370"
-                    height="294"
-                  />
-                  <h3 class="work-portfolio-subtitle">Проект Boxes</h3>
-                  <p class="work-text">Приложение</p>
-                </a>
-              </div>
+              <a class="link" href="">
+                <img
+                  src="./images/main/portfolio-work/work5.jpg"
+                  alt="Веб-сайт"
+                  width="370"
+                  height="294"
+                />
+                <h3 class="work-portfolio-subtitle">Проект Boxes</h3>
+                <p class="work-text">Приложение</p>
+              </a>
             </li>
             <li class="portfolio-element-item">
-              <div>
-                <a class="link" href="">
-                  <img
-                    src="./images/main/portfolio-work/work6.jpg"
-                    alt="Веб-сайт"
-                    width="370"
-                    height="294"
-                  />
-                  <h3 class="work-portfolio-subtitle">
-                    Inspiration has no Borders
-                  </h3>
-                  <p class="work-text">Веб-сайт</p>
-                </a>
-              </div>
+              <a class="link" href="">
+                <img
+                  src="./images/main/portfolio-work/work6.jpg"
+                  alt="Веб-сайт"
+                  width="370"
+                  height="294"
+                />
+                <h3 class="work-portfolio-subtitle">
+                  Inspiration has no Borders
+                </h3>
+                <p class="work-text">Веб-сайт</p>
+              </a>
             </li>
             <li class="portfolio-element-item">
-              <div>
-                <a class="link" href="">
-                  <img
-                    src="./images/main/portfolio-work/work7.jpg"
-                    alt="Веб-сайт"
-                    width="370"
-                    height="294"
-                  />
-                  <h3 class="work-portfolio-subtitle">
-                    Издание Limited Edition
-                  </h3>
-                  <p class="work-text">Дизайн</p>
-                </a>
-              </div>
+              <a class="link" href="">
+                <img
+                  src="./images/main/portfolio-work/work7.jpg"
+                  alt="Веб-сайт"
+                  width="370"
+                  height="294"
+                />
+                <h3 class="work-portfolio-subtitle">Издание Limited Edition</h3>
+                <p class="work-text">Дизайн</p>
+              </a>
             </li>
             <li class="portfolio-element-item">
-              <div>
-                <a class="link" href="">
-                  <img
-                    src="./images/main/portfolio-work/work8.jpg"
-                    alt="Веб-сайт"
-                    width="370"
-                    height="294"
-                  />
-                  <h3 class="work-portfolio-subtitle">Проект LAB</h3>
-                  <p class="work-text">Маркетинг</p>
-                </a>
-              </div>
+              <a class="link" href="">
+                <img
+                  src="./images/main/portfolio-work/work8.jpg"
+                  alt="Веб-сайт"
+                  width="370"
+                  height="294"
+                />
+                <h3 class="work-portfolio-subtitle">Проект LAB</h3>
+                <p class="work-text">Маркетинг</p>
+              </a>
             </li>
             <li class="portfolio-element-item">
-              <div>
-                <a class="link" href="">
-                  <img
-                    src="./images/main/portfolio-work/work9.jpg"
-                    alt="Веб-сайт"
-                    width="370"
-                    height="294"
-                  />
-                  <h3 class="work-portfolio-subtitle">Growing Business</h3>
-                  <p class="work-text">Приложение</p>
-                </a>
-              </div>
+              <a class="link" href="">
+                <img
+                  src="./images/main/portfolio-work/work9.jpg"
+                  alt="Веб-сайт"
+                  width="370"
+                  height="294"
+                />
+                <h3 class="work-portfolio-subtitle">Growing Business</h3>
+                <p class="work-text">Приложение</p>
+              </a>
             </li>
           </ul>
         </div>
