--- a/portfolio.html
+++ b/portfolio.html
@@ -51,9 +51,10 @@
           </ul>
         </address>
       </div>
+      <div class="line"></div>
     </header>
     <main>
-      <hr />
+
       <!-- portfolio button -->
       <section class="portfolio">
         <div class="container">
